<?xml version="1.0"?>
<package format="2">
  <name>mbf_tools</name>
  <version>0.0.0</version>
  <description>The mbf_tools meta package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>3-Clause BSD</license>

  <url type="website">http://wiki.ros.org/move_base_flex/Tutorials</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveback_recovery</exec_depend>
  <exec_depend>move_base_flex</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
